tests/invalid/pragma_c_code_dup_var.err_exp2
pragma_c_code_dup_var.m:014: Error: no clauses for
pragma_c_code_dup_var.m:014:   function `pragma_c_code_dup_var:bread_impl/7'.
For more information, try recompiling with `-E'.
